<resources>
    <string name="app_name">EstacionamentoSensedia</string>
    <string name="retirar_carro_label">Retirar</string>
    <string name="devolver_carro_label">Devolver</string>
    <string name="login_label">Entrar</string>
    <string name="digite_a_placa_do_carro_label">Digite a placa do carro</string>
    <string name="digite_o_usuario_label">Digite o usuário</string>
    <string name="digite_a_senha_label">Digite a senha</string>
    <string name="bem_vindo_label">Bem-vindo</string>
    <string name="sistema_de_estacionamento_label">Sistema de estacionamento</string>
    <string name="map_btn_send">Enviar</string>
    <string name="id_veiculo">id_veiculo</string>
    <string name="chapa">chapa</string>
    <string name="id_localizacao">id_localizacao</string>
    <string name="btn_map_finalizar">Finalizar</string>
    <string name="title_activity_email_forgot">EmailForgotActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="enviar">Enviar</string>
    <string name="voltar">voltar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
</resources>
