<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    tools:context=".home.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:scaleX="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@mipmap/logo"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="2dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/labelBemVindo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/bem_vindo_label"
                    android:textColor="#4a2564"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelSistemaEstacionamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/sistema_de_estacionamento_label"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelBemVindo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_senha"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusedByDefault="false"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/digite_a_senha_label"
                    android:inputType="textPassword"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_usuario_carro">

                    <TextView
                        android:id="@+id/login_error"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/design_default_color_error"
                        tools:text="@tools:sample/lorem"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_senha_interno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:maxLength="7"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_carro"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:focusedByDefault="false"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/digite_o_usuario_label"
                    android:inputType="text"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelSistemaEstacionamento">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_usuario_interno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:maxLength="7"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_senha">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_Devolver_Carro"
                        android:layout_width="120dp"
                        android:layout_height="52dp"
                        android:layout_marginStart="40dp"
                        android:background="@drawable/round_corner"
                        android:backgroundTint="#4a2564"
                        android:elevation="2dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/login_label"
                        android:textColor="#FFFFFF"
                        app:layout_constraintStart_toEndOf="@+id/button_Retirar_Carro"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="#4a2564"
            android:minHeight="15dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
